--- a/index.html
+++ b/index.html
@@ -99,30 +99,31 @@
 </head>
 <body>
     <header>
-        Your Name
+        Radhika Ramakrishnan
     </header>
 
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <img src="your-photo.jpg" alt="Your Photo">
-            <a href="your-cv.pdf" target="_blank">CV</a>
-            <a href="your-website" target="_blank">Website</a>
-            <a href="your-linkedin" target="_blank">LinkedIn</a>
+            <img src="Photo.jpg" alt="Your Photo">
+            <a href="coming_soon_copy_4.pdf" target="_blank">CV</a>
+            <a href="https://sites.northwestern.edu/rry592" target="_blank">Northwestern Website</a>
+            <a href="https://www.linkedin.com/in/radhika-ramakrishnan-8583a2123/" target="_blank">LinkedIn</a>
         </div>
 
         <!-- Main Content -->
         <div class="content">
             <!-- About Me -->
             <div>
-                <p>Brief description of yourself goes here.</p>
-                <p>Contact: <a href="mailto:your@email.com">your@email.com</a></p>
+                <p>Welcome!  I am a PhD Candidate in Economics at Northwestern University.  My primary research fields are health and applied microeconomics, with a secondary field in industrial organization.  I have extensive experience employing causal inference methods in large observational datasets. </p>
+                <p>I am on the job market during the 2025-2026 academic year.</p>
+                <p>Contact: <a href="mailto:rram@u.northwestern.edu">rram@u.northwestern.edu</a></p>
             </div>
 
             <!-- Job Market Paper -->
             <div>
                 <h2>Job Market Paper</h2>
-                <p><strong>Title of Paper</strong> (<a href="jmp.pdf" target="_blank">link</a>)</p>
+                <p><strong>Hospital Ownership and Quality of Care</strong> (<a href="coming_soon.pdf" target="_blank">link</a>)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content">
                     <p>Your abstract goes here. This will expand and collapse when clicked.</p>
@@ -132,11 +133,11 @@
             <!-- Works in Progress -->
             <div>
                 <h2>Works in Progress</h2>
-                <p><strong>Title 1</strong> (<a href="paper1.pdf" target="_blank">link</a>)</p>
+                <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>Abstract for paper 1.</p></div>
 
-                <p><strong>Title 2</strong> (<a href="paper2.pdf" target="_blank">link</a>)</p>
+                <p><strong>School Finance Reforms and Birth Outcomes, with Sam Ayers</strong> (<a href="coming_soon_copy_2.pdf" target="_blank">link</a>)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>Abstract for paper 2.</p></div>
             </div>
@@ -145,23 +146,27 @@
             <div>
                 <h2>Teaching</h2>
                 <div class="evaluations-link">
-                    <a href="evaluations.pdf" target="_blank">Evaluations</a>
+                    <a href="coming_soon_copy_3.pdf" target="_blank">Evaluations</a>
                 </div>
 
                 <p class="toggle-button" onclick="toggleContent(this)">MBA</p>
                 <div class="toggle-content">
                     <ul>
-                        <li>MBA Course 1</li>
-                        <li>MBA Course 2</li>
+                        <li>Marketing Strategy - Teaching Assistant: Full-time MBA, Executive MBA, and Corporate Education Programs (Spring 2024, Fall 2023, Spring 2023, Winter 2023, Fall 2022, Spring 2022)</li>
+                        <li>Healthcare Strategy - Grader: Full-time MBA (Winter 2023)</li>
                     </ul>
                 </div>
 
                 <p class="toggle-button" onclick="toggleContent(this)">Undergraduate</p>
                 <div class="toggle-content">
+                    <p>I was a teaching assistant for the following courses:</p>
                     <ul>
-                        <li>Undergraduate Course 1</li>
-                        <li>Undergraduate Course 2</li>
+                        <li>Introduction to Macroeconomics (Winter 2025, Winter 2024, Fall 2023, Fall 2021) </li>
+                        <li>Introduction to Microeconomics (Fall 2024) </li>
+                        <li>Industrial Organization (Spring 2024)</li>
+                        <li>International Trade (Spring 2022, Winter 2022)</li>
                     </ul>
+                    <p>I received the Northwestern Economics Department Distinguished Teaching Assistant Award in 2023 and 2024 for my excellence in instruction for undergraduate coursework.</p>
                 </div>
             </div>
         </div>
