test of cookies

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- About Me -->
             <div>
                 <p>Welcome!  I am a PhD Candidate in Economics at Northwestern University.  My primary research fields are health and applied microeconomics, with a secondary field in industrial organization.  I have extensive experience employing causal inference methods in large observational datasets. </p>
-                <p>I am on the job market during the 2025-2026 academic year.</p>
+                <p>I am on the job market during the 2025-2026 academic year. Check</p>
                 <p>Contact: <a href="mailto:rram@u.northwestern.edu">rram@u.northwestern.edu</a></p>
             </div>
 
@@ -180,7 +180,7 @@
                 document.cookie = name + '=;expires=Thu, 01 Jan 1970 00:00:00 GMT;path=/';
             });
         });
-        
+
         function toggleContent(element) {
             element.classList.toggle("open");
             let content = element.nextElementSibling;
