--- a/index.html
+++ b/index.html
@@ -125,30 +125,51 @@
 
         <div class="content">
             <div>
-                <p>Welcome! I am a PhD Candidate in Economics at Northwestern University. My primary research fields are health and applied microeconomics, with a secondary field in industrial organization. I have extensive experience employing causal inference methods in large observational datasets.</p>
+                <p>Welcome! I am a PhD Candidate in Economics at Northwestern University. My research is in health economics and applied microeconomics.</p>
+                <p>My work focuses on two topics: 1) the impacts of ownership and organizational structures of healthcare firmst and 2) the health impacts of public policies.</p>
                 <p>I am on the job market during the 2025-2026 academic year.</p>
                 <p>Contact: <a href="mailto:rram@u.northwestern.edu">rram@u.northwestern.edu</a></p>
             </div>
 
             <div>
                 <h2>Job Market Paper</h2>
-                <p><strong>Hospital Ownership and Quality of Care</strong> (<a href="coming_soon.pdf" target="_blank">link</a>)</p>
+                <p><strong>Hospital Ownership and Quality of Care</strong> (draft coming soon)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content">
-                    <p>Your abstract goes here.</p>
+                    <p>Differences between nonprofit and for-profit hospitals within the private US hospital market have been
+a matter of longstanding theoretical and empirical interest in economics and are the subject of much
+policy debate. Despite this, few prior works take a causal approach to examining the difference in
+quality of care between these hospital types. I apply an instrumental variables strategy based on
+ambulance preferences for individual hospitals (Doyle et al. 2015) to mitigate patient selection into
+hospital types. I find that for-profit hospitals offer slightly worse care (5.7% higher readmissions) and
+cause patients to experience higher costs (6.7%). These effects are not attenuated over time. Higher costs are likely driven in part by higher treatment intensity in the form of more frequent inpatient
+admissions and longer stays.</p>
                 </div>
             </div>
 
             <div>
                 <h2>Works in Progress</h2>
+               
+                 <p><strong>Private Equity and Hospital Care</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
+                <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
+                <div class="toggle-content"><p>I assemble a dataset tracking the private equity ownership of hospitals in the US between 2002-2014.  I will use this data, in combination with Medicare claims data, to understand the impacts of private equity ownership of hospitals on qualtiy of care.  The empirical approach will harness ambulance preferences for hospitals (Doyle et al., 2015) to instrument for the onwership of the destination hospital of ambulance rides.</p></div>
+
                 <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
-                <div class="toggle-content"><p>Abstract for paper 1.</p></div>
+                <div class="toggle-content"><p>In order to ultimately be matched with specialist healthcare providers who are the best fit for them,
+patients may have to undergo a search process that involves switching providers. We examine the
+impacts of vertical integration between primary care providers and specialist providers, whether in
+hospital or practice settings, on the likelihood that diabetes patients switch endocrinologists. Vertical
+integration may make it easier for patients to find the right endocrinologists by initially creating
+higher-value matches (less switching). On the other hand, vertical integration may make it harder
+by inducing referrals by primary care providers to integrated endocrinologists who may not be the
+best fit (more switching). We implement two-way fixed-effects designs to examine the relationship
+between vertical integration and the likelihood of seeing and switching providers. Preliminary results
+suggest that patients with vertically-integrated primary care providers are more likely to see and
+switch endocrinologists. Next steps involve exploring the relationship between switching and health
+outcomes, as well as examining mechanisms for results so far.</p></div>
 
-                <p><strong>Private Equity in the US Hospital Market</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
-                <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
-                <div class="toggle-content"><p>Abstract for paper 1.</p></div>
-
+               
 
             </div>
 
@@ -156,7 +177,14 @@
                 <h2>Working Papers</h2>
                 <p><strong>School Finance Reforms and Birth Outcomes, with Sam Ayers</strong> (<a href="coming_soon_copy_2.pdf" target="_blank">link</a>)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
-                <div class="toggle-content"><p>Abstract for paper 2.</p></div>
+                <div class="toggle-content"><p>A series of school finance reform policies in the late 1900s aimed to reduce educational inequalities
+across schools. Third-wave school finance reform policies implemented funding changes that were
+intended to address inequalities in educational outcomes. Prior work (Rothstein and Schanzenbach,
+2022) finds that these policies improved educational and labor market outcomes. We examine the
+relationship between third-wave school finance reform policies and maternal and infant outcomes.
+Estimates from an event-study design suggest that these policies did not impact maternal and infant
+outcomes. For several outcomes, the confidence intervals include effect sizes comparable to those
+estimated for other education policies and related treatments or other economically meaningful effects.</p></div>
             </div>
 
             <div>
@@ -170,7 +198,7 @@
                         <li>Industrial Organization</li>
                         <li>International Trade</li>
                     </ul>
-                    <p>I received the Northwestern Economics Department Distinguished Teaching Assistant Award in 2023 and 2024.</p>
+                    <p>I received the Northwestern Economics Department Distinguished Teaching Assistant Award in 2022 and 2024.</p>
                 </div>
 
                 <p class="toggle-button" onclick="toggleContent(this)">MBA</p>
