--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="sidebar">
             <img src="Photo.jpg" alt="Your Photo">
-            <a href="coming_soon_copy_4.pdf" target="_blank">CV</a>
+            <a href="Radhika_CV.pdf" target="_blank">CV</a>
             <a href="https://sites.northwestern.edu/rry592" target="_blank">Northwestern Website</a>
             <a href="https://www.linkedin.com/in/radhika-ramakrishnan-8583a2123/" target="_blank">LinkedIn</a>
         </div>
@@ -126,7 +126,7 @@
         <div class="content">
             <div>
                 <p>Welcome! I am a PhD Candidate in Economics at Northwestern University. My research is in health economics and applied microeconomics.</p>
-                <p>My work focuses on two topics: 1) the impacts of ownership and organizational structures of healthcare firmst and 2) the health impacts of public policies.</p>
+                <p>My work focuses on two topics: 1) the impacts of ownership and organizational structures of healthcare firms and 2) the health impacts of public policies.</p>
                 <p>I am on the job market during the 2025-2026 academic year.</p>
                 <p>Contact: <a href="mailto:rram@u.northwestern.edu">rram@u.northwestern.edu</a></p>
             </div>
@@ -150,11 +150,11 @@ admissions and longer stays.</p>
             <div>
                 <h2>Works in Progress</h2>
                
-                 <p><strong>Private Equity and Hospital Care</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
+                 <p><strong>Private Equity and Hospital Care</strong> </p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>I assemble a dataset tracking the private equity ownership of hospitals in the US between 2002-2014.  I will use this data, in combination with Medicare claims data, to understand the impacts of private equity ownership of hospitals on qualtiy of care.  The empirical approach will harness ambulance preferences for hospitals (Doyle et al., 2015) to instrument for the onwership of the destination hospital of ambulance rides.</p></div>
 
-                <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (<a href="coming_soon_copy.pdf" target="_blank">link</a>)</p>
+                <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (Slides coming soon)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>In order to ultimately be matched with specialist healthcare providers who are the best fit for them,
 patients may have to undergo a search process that involves switching providers. We examine the
@@ -175,7 +175,7 @@ outcomes, as well as examining mechanisms for results so far.</p></div>
 
             <div>
                 <h2>Working Papers</h2>
-                <p><strong>School Finance Reforms and Birth Outcomes, with Sam Ayers</strong> (<a href="coming_soon_copy_2.pdf" target="_blank">link</a>)</p>
+                <p><strong>School Finance Reforms and Birth Outcomes, with Sam Ayers</strong> (Draft coming soon)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>A series of school finance reform policies in the late 1900s aimed to reduce educational inequalities
 across schools. Third-wave school finance reform policies implemented funding changes that were
@@ -189,7 +189,7 @@ estimated for other education policies and related treatments or other economica
 
             <div>
                 <h2>Teaching</h2>
-                <p class="toggle-button" onclick="toggleContent(this)">Undergraduate (<a href="coming_soon_copy_3.pdf" target="_blank">Evaluations</a>)</p>
+                <p class="toggle-button" onclick="toggleContent(this)">Undergraduate (<a href="Radhika_Teaching_Effectiveness.pdf" target="_blank"></a>)</p>
                 <div class="toggle-content">
                     <p>I was a teaching assistant for the following undergraduate courses:</p>
                     <ul>
