--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 
             <div>
                 <h2>Job Market Paper</h2>
-                <p><strong>Hospital Ownership and Quality of Care</strong> (draft coming soon)</p>
+                <p><strong>Hospital Ownership and Quality of Care</strong> (<a href="https://www.dropbox.com/scl/fi/9cm2ukjk09arzh8de8fdd/JMP.pdf?rlkey=hk0smvse6uwdokqi10oqhiooq&st=jsxj7vtw&dl=0" target="_blank">draft</a>)</p>
+
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content">
                     <p>Differences between nonprofit and for-profit hospitals within the private US hospital market have been
@@ -177,8 +178,9 @@ outcomes, as well as examining mechanisms for results so far.</p></div>
             </div>
 
             <div>
-                <h2>Working Papers</h2>
-                <p><strong>School Finance Reforms and Birth Outcomes, with Sam Ayers</strong> (draft coming soon)</p>
+                <h2>Additional Working Paper</h2>
+                <p><strong>School Finance Reforms and Birth Outcomes, with Samuel Ayers</strong> (<a href="https://www.dropbox.com/scl/fi/9lvjqlm5c5p62t5n06xou/School_Finance_Reforms_Draft.pdf?rlkey=0utmecxg3jikiromvozouq9fc&st=gas00tv5&dl=0" target="_blank">draft</a>)</p>
+
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>A series of school finance reform policies in the late 1900s aimed to reduce educational inequalities
 across schools. Third-wave school finance reform policies implemented funding changes that were
