--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ admissions and longer stays.</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>I assemble a dataset tracking the private equity ownership of hospitals in the US between 2002-2014.  I will use this data, in combination with Medicare claims data, to understand the impacts of private equity ownership of hospitals on qualtiy of care.  The empirical approach will harness ambulance preferences for hospitals (Doyle et al., 2015) to instrument for the onwership of the destination hospital of ambulance rides.</p></div>
 
-                <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (slides coming soon)</p>
+                <p><strong>Vertical Integration and Provider Choice, with Xingyue Xin</strong> (<a href="vertical_integration_provider_choice.pdf">slides</a>) (abbreviated draft available upon request)</p>
                 <p class="toggle-button" onclick="toggleContent(this)">Abstract</p>
                 <div class="toggle-content"><p>In order to ultimately be matched with specialist healthcare providers who are the best fit for them,
 patients may have to undergo a search process that involves switching providers. We examine the
